[package]
authors = ["Josh Chase <josh@jec.pw>"]
name = "demo"
version = "0.1.0"
workspace = "../workspace"

[build-dependencies]
bindgen = "*"
env_logger = "*"

[build-dependencies.antlr4-tool]
path = "../tool"
version = "0.1.0"

[dependencies]

[dependencies.antlr4-runtime]
path = "../runtime"
version = "0.1.0"
