[package]
authors = ["Josh Chase <josh@jec.pw>"]
name = "antlr4-tool"
version = "0.1.0"
workspace = "../workspace"
[build-dependencies]
[build-dependencies.antlr4-runtime]
path = "../runtime"
version = "0.1.0"

[dependencies]
cc = "1.0.9"
display_derive = "0.0.0"
failure = "0.1.1"
bindgen = "*"

[dependencies.antlr4-runtime]
path = "../runtime"
version = "0.1.0"
